<resources>
    <string name="app_name">Quest</string>
    <string name="log_google">Login with Google</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="repassword_hint">Retype Password</string>
    <string name="fullNameHint">Full Name</string>
    <string name="lbGender">Gender</string>
    <string name="lbrbMale">Male</string>
    <string name="lbrbFemale">Female</string>
    <string name="agreement">I Agree with the terms and conditions of the Quest Group</string>
    <string name="job_hint">Job</string>
    <string name="location_hint">Location</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="move_regis">Dont have any account? Register Now</string>
    <string name="title_login">Sign in your account</string>
    <string name="title_register">Sign up your account</string>
    <string name="title_register_detail">Fill your Account</string>
    <string name="title_register_major">Choose Major and 3 Topic you might like</string>

    <string-array name="majors_array">
        <item>Choose Major</item>
        <item>Accounting</item>
        <item>Computer Science</item>
        <item>Information Systems</item>
        <item>Management</item>
    </string-array>

    <string-array name="ComputerScience">
        <item>Algorithm</item>
        <item>Calculus</item>
        <item>Artificial Intelligence</item>
        <item>Python</item>
        <item>Mobile</item>
        <item>Web Programming</item>
        <item>Virtual Intelligence</item>
        <item>Laravel</item>
        <item>Network</item>
        <item>Technology</item>
    </string-array>

    <string-array name="InformationSystems">
        <item>Business Information</item>
        <item>Statistic</item>
        <item>Management System</item>
        <item>Information</item>
        <item>Technology</item>
        <item>Web</item>
        <item>Mobile Android</item>
        <item>Object Oriented Programming</item>
        <item>Design and Analysis</item>
        <item>Java</item>
    </string-array>

    <string-array name="Accounting">
        <item>Financial</item>
        <item>Tax</item>
        <item>Audit</item>
        <item>Accounting Information Systems</item>
        <item>Fiduciary</item>
        <item>Budgeting</item>
        <item>Ledger</item>
        <item>Sales</item>
        <item>Report</item>
        <item>Cash Flow</item>
    </string-array>

    <string-array name="Management">
        <item>Stock Exchange</item>
        <item>Marketing</item>
        <item>Business</item>
        <item>Analysis</item>
        <item>Capital</item>
        <item>Bull</item>
        <item>Trade</item>
        <item>Costing</item>
        <item>Report</item>
        <item>Strategy</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="room_name">Room Name</string>
    <string name="create_room">Create Room</string>
    <string name="home">Home</string>
    <string name="answer">Answer</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="write_your_question">Write your question</string>
    <string name="question">Question</string>
    <string name="create_question">Create Question</string>
    <string name="created_room_by_you">Created Room by You</string>
    <string name="room_you_might_like">Room you might like</string>
    <string name="room_following_by_you">Room Following by You</string>
    <string name="title_activity_room_detail">A</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="comment">comment</string>
</resources>