<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivtity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up your account"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/re-passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbGender"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"/>

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:text="@string/lbrbMale"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:text="@string/lbrbFemale"
                android:textSize="18sp"/>
        </RadioGroup>

        <CheckBox
            android:id="@+id/agreeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/agreement"
            android:layout_marginBottom="18dp"
            android:textSize="20sp"
            android:gravity="start" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:padding="15dp"/>
    </LinearLayout>

</LinearLayout>