<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionFormActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_your_question"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/QuestionFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/topicQuestionFormSpinner"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/createQuestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/create_question"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>